--- a/.travis.yml
+++ b/.travis.yml
@@ -5,8 +5,9 @@ python:
   - "2.7"
 
 # command to install dependencies
-install: "pip install -r requirements.txt"
-install: "pip install -r testing-requirements.txt"
+install:
+  - "pip install -r requirements.txt"
+  - "pip install -r testing-requirements.txt"
 
 #command to run tests
 script: "nosetests"
