--- a/.travis.yml
+++ b/.travis.yml
@@ -9,5 +9,7 @@ install:
   - "pip install -r requirements.txt"
   - "pip install -r testing-requirements.txt"
 
+before_script: "python test/flask-test-app.py"
+
 #command to run tests
 script: "nosetests"
