--- a/.travis.yml
+++ b/.travis.yml
@@ -10,8 +10,8 @@ install:
   - "pip install -r testing-requirements.txt"
 
 before_script:
-  - "cd test" 
-  - "python test/flask-test-app.py"
+  - "cd tests" 
+  - "python flask-test-app.py"
 
 #command to run tests
 script: "nosetests"
